--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -40,6 +40,9 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="{{ url_for('cargo.cargo_relationship') }}">Cargo Relationship</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="{{ url_for('dashboard.wage_rates') }}">Wage Rates</a>
+          </li>
         </ul>
       </div>
     </div>
