--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,6 +11,7 @@
     rel="stylesheet"
     href="{{ url_for('static', filename='css/custom.css') }}"
   >
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
   <!-- fixed‑top navbar -->
